--- a/.github/workflows/CI-CD Pipeline.yml
+++ b/.github/workflows/CI-CD Pipeline.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - develop
+      - main
+      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
