--- a/.github/workflows/CI-CD Pipeline.yml
+++ b/.github/workflows/CI-CD Pipeline.yml
@@ -51,11 +51,9 @@ jobs:
           DISCORD_CHANNEL_ID: ${{ secrets.DISCORD_CHANNEL_ID }}
         run: |
           curl -v \
-          -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
-          -H "User-Agent: myBotThing (http://some.url, v0.1)" \
           -H "Content-Type: application/json" \
           -X POST \
           -d '{"content":"Deployment to '${{ github.ref }}' was successful. Image: my-app:'${{ github.sha }}'"}' \
-          https://discordapp.com/api/channels/$DISCORD_CHANNEL_ID/messages
+          ${{ secrets.DISCORD_WEBHOOK_URL }}
           
     
